# TopicAdvisor

./: .env.example  .gitignore  README.md  alembic.ini  build_charts_v2.py  config.py  docker-compose.yml  eval_expert.html  eval_results(2).json  eval_results.json  eval_runner.py  main.py  pyproject.toml  run.py  test_quick.py  tests.lnk
api/: deps.py  main.py  schemas.py
api/routers/: auth.py  topics.py
client/: next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
client/.next/: app-build-manifest.json  trace
client/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
client/.next/server/app/: page.js  page_client-reference-manifest.js
client/app/: globals.css  layout.tsx  page.tsx
client/app/history/: page.tsx
client/app/login/: page.tsx
client/app/register/: page.tsx
client/app/welcome/: page.tsx
client/components/: PageBackground.tsx
client/messages/: en.json  ru.json
core/: extractor.py  generator.py  pipeline.py  planner.py  reranker.py  retriever.py
data/: add_categories.py  arxiv_client.py  cache.py  indexer.py  reindex_cs.py
db/: models.py  session.py
db/migrations/: env.py
db/migrations/versions/: 3a75f00ff838_add_users_table.py  af038ddfa095_add_user_id_to_user_queries.py  d3f9c4af4907_init_tables.py
prompts/: extractor.txt  generator.txt  planner.txt
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_api.py  test_indexer.py  test_retriever.py
tests/unit/: test_arxiv.py  test_extractor.py  test_generator.py  test_indexer_unit.py
(+61 files in other folders)
