[project]
name = "topicadvisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "diskcache>=5.6.3",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[v2]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "sickle>=0.7.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "torch>=2.10.0",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
